--- a/Client/src/app/components/schedule/schedule.component.scss
+++ b/Client/src/app/components/schedule/schedule.component.scss
@@ -9,6 +9,11 @@ td > button {
     width: 90%;
     padding-left: 5px !important;
     padding-right: 5px !important;
+    
+}
+
+.button-check {
+    height: 29px !important;
 }
 
 th, td {
