--- a/Client/src/app/components/navbar/navbar.component.html
+++ b/Client/src/app/components/navbar/navbar.component.html
@@ -23,7 +23,11 @@
         </button>
         <div class="collapse navbar-collapse justify-content-end" id="navigation">
             <ul class="navbar-nav">
-
+                <li class="nav-item" *ngIf="isAdmin()">
+                    <button class="btn btn-sm btn-outline-light">
+                        Asignación Automática
+                    </button>
+                </li>
                 <li class="nav-item dropdown" *ngIf="isAdmin()">
                     <a class="nav-link" id="navbarDropdownMenuLink" data-toggle="dropdown"
                         aria-haspopup="true" aria-expanded="false">
@@ -49,6 +53,8 @@
                     <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownMenuLink">
                         <p class="dropdown-item">Perfil</p>
                         <p class="dropdown-item" (click)="logout()">Cerrar Sesión</p>
+                        <mat-divider></mat-divider>
+                        <p class="dropdown-item">Asignación Automática</p>
                     </div>
                 </li>
             </ul>
