--- a/Client/src/app/modules/resources/buildings/classrooms/classroom-view/classroom-view.component.html
+++ b/Client/src/app/modules/resources/buildings/classrooms/classroom-view/classroom-view.component.html
@@ -9,7 +9,7 @@
     </div>
     <div fxLayout="column" fxLayoutGap="10px">
 
-        <table class="table table-bordered mat-elevation-z1">
+        <table class="table table-bordered mat-elevation-z1 span12" style="table-layout: fixed;">
           <thead>
             <tr>
               <th style="width: 5%">Bloque</th>
@@ -28,48 +28,66 @@
               <td>
                 <button type="button" class="btn button-check btn-sm"
                   [class.btn-light]="checks.monday[item.id - 1]" [class.btn-success]="!checks.monday[item.id - 1]"
+                  matTooltip="{{sectionsNames.monday[item.id - 1]}}"
+                  matTooltipPosition="above"
+                  [matTooltipDisabled]="!checks.monday[item.id - 1]"
                   (click)="checkButton(checks.monday, item.id - 1)" ngDefaultControl>
-                  {{checks.monday[item.id - 1] ? 'Ocupado' : 'Disponible'}}
+                  {{checks.monday[item.id - 1] ? sectionsNames.monday[item.id - 1] : 'Disponible'}}
                 </button>
             
               </td>
               <td>
                 <button type="button" class="btn button-check btn-sm"
                   [class.btn-light]="checks.tuesday[item.id - 1]" [class.btn-success]="!checks.tuesday[item.id - 1]"
+                  matTooltip="{{sectionsNames.tuesday[item.id - 1]}}"
+                  matTooltipPosition="above"
+                  [matTooltipDisabled]="!checks.tuesday[item.id - 1]"
                   (click)="checkButton(checks.tuesday, item.id - 1)" ngDefaultControl>
-                  {{checks.tuesday[item.id - 1] ? 'Ocupado' : 'Disponible'}}
+                  {{checks.tuesday[item.id - 1] ? sectionsNames.tuesday[item.id - 1] : 'Disponible'}}
                 </button>
                
               </td>
               <td>
                 <button type="button" class="btn button-check btn-sm"
                   [class.btn-light]="checks.wednesday[item.id - 1]" [class.btn-success]="!checks.wednesday[item.id - 1]"
+                  matTooltip="{{sectionsNames.wednesday[item.id - 1]}}"
+                  matTooltipPosition="above"
+                  [matTooltipDisabled]="!checks.wednesday[item.id - 1]"
                   (click)="checkButton(checks.wednesday, item.id - 1)" ngDefaultControl>
-                  {{checks.wednesday[item.id - 1] ? 'Ocupado' : 'Disponible'}}
+                  {{checks.wednesday[item.id - 1] ? sectionsNames.wednesday[item.id - 1] : 'Disponible'}}
                 </button>
               
               </td>
               <td>
                 <button  type="button" class="btn button-check btn-sm"
                   [class.btn-light]="checks.thursday[item.id - 1]" [class.btn-success]="!checks.thursday[item.id - 1]"
+                  matTooltip="{{sectionsNames.thursday[item.id - 1]}}"
+                  matTooltipPosition="above"
+                  [matTooltipDisabled]="!checks.thursday[item.id - 1]"
                   (click)="checkButton(checks.thursday, item.id - 1)" ngDefaultControl>
-                  {{checks.thursday[item.id - 1] ? 'Ocupado' : 'Disponible'}}
+                  {{checks.thursday[item.id - 1] ? sectionsNames.thursday[item.id - 1] : 'Disponible'}}
                 </button>
                
               </td>
               <td>
                 <button type="button" class="btn button-check btn-sm"
                   [class.btn-light]="checks.friday[item.id - 1]" [class.btn-success]="!checks.friday[item.id - 1]"
+                  matTooltip="{{sectionsNames.friday[item.id - 1]}}"
+                  matTooltipPosition="above"
+                  [matTooltipDisabled]="!checks.friday[item.id - 1]"
                   (click)="checkButton(checks.friday, item.id - 1)" ngDefaultControl>
-                  {{checks.friday[item.id - 1] ? 'Ocupado' : 'Disponible'}}
+                  {{checks.friday[item.id - 1] ? sectionsNames.friday[item.id - 1] : 'Disponible'}}
                 </button>
               
               </td>
               <td>
                 <button type="button" class="btn button-check btn-sm" [class.btn-light]="checks.saturday[item.id - 1]"
                   [class.btn-success]="!checks.saturday[item.id - 1]"
+                  matTooltip="{{sectionsNames.saturday[item.id - 1]}}"
+                  matTooltipPosition="above"
+                  [matTooltipDisabled]="!checks.saturday[item.id - 1]"
                   (click)="checkButton(checks.saturday, item.id - 1)" ngDefaultControl>
-                  {{checks.saturday[item.id - 1] ? 'Ocupado' : 'Disponible'}}
+                  {{checks.saturday[item.id - 1] ? sectionsNames.saturday[item.id - 1] : 'Disponible'}}
                 </button>
                
               </td>
