--- a/Client/src/app/modules/resources/buildings/classrooms/classroom-view/classroom-view.component.scss
+++ b/Client/src/app/modules/resources/buildings/classrooms/classroom-view/classroom-view.component.scss
@@ -18,11 +18,20 @@ td > button {
   width: 90%;
   padding-left: 5px !important;
   padding-right: 5px !important;
-  
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
 }
-
+p {
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+}
 .button-check {
   height: 29px !important;
+  //overflow: hidden;
+  //text-overflow: ellipsis;
+  //white-space: nowrap;
 }
 
 th, td {
@@ -31,6 +40,10 @@ th, td {
 }
 .table td, table th {
   text-align: center;   
+}
+
+td {
+  overflow: hidden !important;
 }
 /*
 mat-row {
