--- a/Client/src/app/components/navbar/navbar.component.html
+++ b/Client/src/app/components/navbar/navbar.component.html
@@ -24,7 +24,7 @@
         <div class="collapse navbar-collapse justify-content-end" id="navigation">
             <ul class="navbar-nav">
                 <li class="nav-item" *ngIf="isAdmin()">
-                    <button class="btn btn-sm btn-outline-light">
+                    <button (click)="selectAssignation()" class="btn btn-sm btn-outline-light">
                         Asignación Automática
                     </button>
                 </li>
@@ -53,8 +53,6 @@
                     <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownMenuLink">
                         <p class="dropdown-item">Perfil</p>
                         <p class="dropdown-item" (click)="logout()">Cerrar Sesión</p>
-                        <mat-divider></mat-divider>
-                        <p class="dropdown-item">Asignación Automática</p>
                     </div>
                 </li>
             </ul>
