--- a/Client/src/app/components/navbar/navbar.component.html
+++ b/Client/src/app/components/navbar/navbar.component.html
@@ -29,8 +29,8 @@
                     </button>
                 </li>
                 <li class="nav-item dropdown" *ngIf="isAdmin()">
-                    <a class="nav-link" id="navbarDropdownMenuLink" data-toggle="dropdown"
-                        aria-haspopup="true" aria-expanded="false">
+                    <a class="nav-link" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true"
+                        aria-expanded="false">
                         <i class="material-icons">notifications</i>
                         <span *ngIf="completedCareers" class="notification">{{completedCareers.length}}</span>
                         <p>
