--- a/Client/src/app/components/assignation-select-dialog/assignation-select-dialog.component.html
+++ b/Client/src/app/components/assignation-select-dialog/assignation-select-dialog.component.html
@@ -3,30 +3,43 @@
     <h4>Búsqueda de sala disponible el día: {{dayText}}</h4>
     <div fxLayout="row" fxLayoutAlign="space-between baseline" fxLayoutGap="5px">
         <p><b>Bloque:</b> {{data.block+1}}</p>
-        <mat-form-field>
-            <mat-label>Sala </mat-label>
-            <mat-select [(value)]="classroom" [(disabled)]="classroomWithSpan">
-                <mat-option [value]="null">--</mat-option>
-                <mat-option *ngFor="let classroom of classrooms" [value]="classroom">
-                    {{classroom.name}} ({{classroom.capacity}} estudiantes)
-                </mat-option>
-            </mat-select>
-        </mat-form-field>
+        <form fxFlex="50%">
+            <mat-form-field>
+                <input type="text" placeholder="Sala" aria-label="Sala bloque único" matInput
+                    [formControl]="singleClassroomControl" [matAutocomplete]="auto">
+                    <button mat-button *ngIf="singleClassroomControl.value" matSuffix mat-icon-button aria-label="Clear" (click)="value=singleClassroomControl.setValue('')">
+                            <mat-icon>close</mat-icon>
+                          </button>
+                <mat-autocomplete autoActiveFirstOption #auto="matAutocomplete">
+                    <mat-option (click)="selectedSingle()" *ngFor="let classroom of filteredClassroom | async"
+                        [value]="classroom.name">
+                        {{classroom.name}} ({{classroom.capacity}} estudiantes)
+                    </mat-option>
+                </mat-autocomplete>
+            </mat-form-field>
+        </form>
     </div>
     <mat-divider *ngIf="data.span > 0"></mat-divider>
     <div *ngIf="data.span > 0" fxLayout="row" fxLayoutAlign="space-between baseline" fxLayoutGap="5px">
         <p><b>Bloques:</b> [{{data.block+1}}-{{data.block + 1 + data.span}}]</p>
-        <mat-form-field>
-            <mat-label>Sala </mat-label>
-            <mat-select [(value)]="classroomWithSpan" [(disabled)]="classroom" >
-                <mat-option [value]="null">--</mat-option>
-                <mat-option *ngFor="let classroom of classroomsWithSpan" [value]="classroom">
-                    {{classroom.name}} ({{classroom.capacity}} estudiantes)
-                </mat-option>
-            </mat-select>
-        </mat-form-field>
+        <form fxFlex="50%">
+            <mat-form-field>
+                <input type="text" placeholder="Sala" aria-label="Sala grupo de bloques" matInput
+                    [formControl]="spanClassroomControl" [matAutocomplete]="auto">
+                    <button mat-button *ngIf="spanClassroomControl.value" matSuffix mat-icon-button aria-label="Clear" (click)="value=spanClassroomControl.setValue('')">
+                            <mat-icon>close</mat-icon>
+                          </button>
+                <mat-autocomplete autoActiveFirstOption #auto="matAutocomplete">
+                    <mat-option (click)="selectedWithSpan()" *ngFor="let classroom of filteredClassroomWithSpan | async"
+                        [value]="classroom.name">
+                        {{classroom.name}} ({{classroom.capacity}} estudiantes)
+                    </mat-option>
+                </mat-autocomplete>
+            </mat-form-field>
+        </form>
     </div>
 </div>
 <div mat-dialog-actions class="pull-right">
-    <button mat-raised-button (click)="close()" class="btn-danger">Cancelar</button>
+    <button mat-raised-button (click)="close()" class="btn-light">Cancelar</button>
+    <button mat-raised-button (click)="submit()" class="btn-success">Aceptar</button>
 </div>
