--- a/Client/src/app/modules/resources/subjects/schedule/schedule.component.scss
+++ b/Client/src/app/modules/resources/subjects/schedule/schedule.component.scss
@@ -16,6 +16,21 @@ td > button {
     height: 29px !important;
 }
 
+.button-true {
+    margin: 0px;
+    width: 90%;
+}
+
+.btn-group {
+    margin: 5px 1px;
+    width: 90%;
+}
+
+.button-delete {
+    width: 10%;
+    margin: 0px;
+}
+
 th, td {
     padding-top: 5px !important;
     padding-bottom: 5px !important;
