--- a/Client/src/app/modules/resources/buildings/classrooms/classrooms-list/classrooms-list.component.html
+++ b/Client/src/app/modules/resources/buildings/classrooms/classrooms-list/classrooms-list.component.html
@@ -7,13 +7,15 @@
         </h3>
       </div>
     </div>
-    <div class="row">
-      <div class="col-2 offset-10">
+    <div fxLayout="row" fxLayoutAlign="end center" fxLayoutGap="5px">
+      <button mat-raised-button class="btn-info">
+        <mat-icon>search</mat-icon>
+        Buscar disponible
+      </button>
         <button mat-raised-button (click)="addClassroom()"  class="btn-success pull-right">
           <mat-icon>add</mat-icon>
           Agregar
         </button>
-      </div>
     </div>
       <mat-table [dataSource]="dataSource" matSort class="mat-elevation-z1">
         <!-- Name Column -->
