--- a/Client/src/app/modules/resources/subjects/section-schedule/section-schedule.component.html
+++ b/Client/src/app/modules/resources/subjects/section-schedule/section-schedule.component.html
@@ -10,14 +10,14 @@
             <div fxLayout="row" fxLayoutAlign="end center" fxLayoutGap="5px">
                 <mat-form-field>
                     <mat-label>Profesor de sección</mat-label>
-                    <mat-select [(value)]="teacherId">
+                    <mat-select [(value)]="teacherId" [disabled]="!canEdit()">
                         <mat-option *ngFor="let t of teachers$ | async" [value]="t.id">
                             {{t.name}}
                         </mat-option>
                     </mat-select>
                 </mat-form-field>
                 <mat-form-field>
-                    <input matInput type="number" placeholder="Estudiantes" [(ngModel)]="section.students">
+                    <input matInput type="number" placeholder="Estudiantes" [(ngModel)]="section.students" [disabled]="!canEdit()">
                 </mat-form-field>
             </div>
 
