--- a/Client/src/app/components/assignation-request/assignation-request.component.html
+++ b/Client/src/app/components/assignation-request/assignation-request.component.html
@@ -6,8 +6,8 @@
                 <ng-template matStepLabel>Ramo/Sección</ng-template>
                 <mat-form-field>
                     <mat-label>Ramo/Sección</mat-label>
-                    <mat-select [value]="sectionId" formControlName="section" required>
-                        <mat-option *ngFor="let section of sections" [value]="section.id">
+                    <mat-select [value]="section" formControlName="section" required>
+                        <mat-option *ngFor="let section of sections" [value]="section">
                             {{section.name}}
                         </mat-option>
                     </mat-select>
@@ -48,7 +48,7 @@
                         <input matInput type="number" min="1" max="11" placeholder="Duración en bloques"
                             formControlName="span" required>
                     </mat-form-field>
-                    <button fxFlex="10%" mat-raised-button [disabled]="day.invalid || block.invalid"
+                    <button fxFlex="10%" mat-raised-button [disabled]="day.invalid || block.invalid || span.invalid"
                         (click)="searchForClassrooms()">
                         <mat-icon>search</mat-icon>
                     </button>
@@ -58,14 +58,14 @@
                         <mat-label>Sala</mat-label>
                         <mat-select [value]="selectedClassroom" formControlName="classroom" required>
                             <mat-optgroup *ngFor="let building of buildings" [label]="building.name">
-                                <mat-option *ngFor="let classroom of building.classrooms" [value]="classroom.id">
+                                <mat-option *ngFor="let classroom of building.classrooms" [value]="classroom">
                                     {{classroom.name}} ({{classroom.capacity}} estudiantes)
                                 </mat-option>
                             </mat-optgroup>
                         </mat-select>
                     </mat-form-field>
                 </div>
-                <div mat-dialog-actions fxLayout="row" fxLayoutGap="5px" fxLayoutAlign="end center">
+                <div mat-dialog-actions fxLayout="row" fxLayoutAlign="end center">
                     <button mat-raised-button matStepperPrevious class="btn-primary">
                         <mat-icon>
                             arrow_back
@@ -90,7 +90,7 @@
                 </mat-form-field>
             </form>
 
-            <div mat-dialog-actions fxLayout="row" fxLayoutGap="5px" fxLayoutAlign="end center">
+            <div mat-dialog-actions fxLayout="row" fxLayoutAlign="end center">
                 <button mat-raised-button matStepperPrevious class="btn-sm btn-primary">
                     <mat-icon>
                         arrow_back
