--- a/Client/src/app/components/assignation-special-request/assignation-special-request.component.html
+++ b/Client/src/app/components/assignation-special-request/assignation-special-request.component.html
@@ -6,8 +6,8 @@
                 <ng-template matStepLabel>Ramo/Sección</ng-template>
                 <mat-form-field>
                     <mat-label>Ramo/Sección</mat-label>
-                    <mat-select [value]="sectionId" formControlName="section" required>
-                        <mat-option *ngFor="let section of sections" [value]="section.id">
+                    <mat-select [value]="section" formControlName="section" required>
+                        <mat-option *ngFor="let section of sections" [value]="section">
                             {{section.name}}
                         </mat-option>
                     </mat-select>
@@ -27,32 +27,54 @@
             <form [formGroup]="secondFormGroup">
                 <ng-template matStepLabel>Día, bloque y sala</ng-template>
 
-                <div fxLayout="row" fxLayoutGap="5px" fxLayoutAlign="space-between center">
-                    <mat-form-field fxFlex="60%">
-                        <mat-label>Día</mat-label>
-                        <mat-select [value]="selectedDay" formControlName="day" required>
-                            <mat-option *ngFor="let day of days" [value]="day.value">
-                                {{day.text}}
-                            </mat-option>
-                        </mat-select>
-                    </mat-form-field>
-                    <mat-form-field fxFlex="30%">
-                        <mat-label>Bloque</mat-label>
-                        <mat-select [value]="selectedBlock" formControlName="block" required>
-                            <mat-option *ngFor="let block of blocks" [value]="block">
-                                {{block}}
-                            </mat-option>
-                        </mat-select>
-                    </mat-form-field>
-                    <mat-form-field>
-                        <input matInput type="number" min="1" max="11" placeholder="Duración en bloques"
-                            formControlName="span" required>
-                    </mat-form-field>
-                    <button fxFlex="10%" mat-raised-button [disabled]="day.invalid || block.invalid"
-                        (click)="searchForClassrooms()">
-                        <mat-icon>search</mat-icon>
-                    </button>
+                <div fxLayout="column" formArrayName="requests">
+                    <div fxLayout="row" fxLayoutAlign="space-between">
+                        <h4 mat-dialog-title>Solicitudes</h4>
+                        <button mat-raised-button class="btn-success" (click)="addRequest()" style="max-height: 32px">
+                            <mat-icon>add</mat-icon>
+                        </button>
+                    </div>
+
+                    <div *ngFor="let request of getRequestsForm().controls; let i=index;">
+                        <div [formGroupName]="i" fxLayout="row" fxLayoutGap="5px" fxLayoutAlign="space-between center">
+                            <div fxLayout="row" fxLayoutGap="5px" fxLayoutAlign="space-between center">
+                                <mat-form-field>
+                                    <mat-label>Fecha</mat-label>
+                                    <input matInput formControlName="day" [matDatepicker]="myDatepicker"
+                                        [min]="minDate">
+                                    <mat-datepicker-toggle matSuffix [for]="myDatepicker"></mat-datepicker-toggle>
+                                    <mat-datepicker #myDatepicker></mat-datepicker>
+                                </mat-form-field>
+                                <mat-form-field>
+                                    <mat-label>Bloque</mat-label>
+                                    <mat-select formControlName="block" required>
+                                        <mat-option *ngFor="let block of blocks" [value]="block">
+                                            {{block}}
+                                        </mat-option>
+                                    </mat-select>
+                                </mat-form-field>
+                            </div>
+                            <mat-form-field *ngIf="availableClassrooms[i]">
+                                <mat-label>Sala</mat-label>
+                                <mat-select formControlName="classroom" required>
+                                    <mat-optgroup *ngFor="let building of availableClassrooms[i]"
+                                        [label]="building.name">
+                                        <mat-option *ngFor="let classroom of building.classrooms" [value]="classroom">
+                                            {{classroom.name}} ({{classroom.capacity}} estudiantes)
+                                        </mat-option>
+                                    </mat-optgroup>
+                                </mat-select>
+                            </mat-form-field>
+                            <button fxFlex="10%" mat-raised-button
+                                [disabled]="request.get('day').invalid || request.get('block').invalid"
+                                (click)="searchForClassrooms(i)">
+                                <mat-icon>search</mat-icon>
+                            </button>
+                        </div>
+                    </div>
                 </div>
+
+                <!--
                 <div *ngIf="buildings">
                     <mat-form-field>
                         <mat-label>Sala</mat-label>
@@ -65,7 +87,8 @@
                         </mat-select>
                     </mat-form-field>
                 </div>
-                <div mat-dialog-actions fxLayout="row" fxLayoutGap="5px" fxLayoutAlign="end center">
+                -->
+                <div mat-dialog-actions fxLayout="row" fxLayoutAlign="end center">
                     <button mat-raised-button matStepperPrevious class="btn-primary">
                         <mat-icon>
                             arrow_back
@@ -90,7 +113,7 @@
                 </mat-form-field>
             </form>
 
-            <div mat-dialog-actions fxLayout="row" fxLayoutGap="5px" fxLayoutAlign="end center">
+            <div mat-dialog-actions fxLayout="row" fxLayoutAlign="end center">
                 <button mat-raised-button matStepperPrevious class="btn-sm btn-primary">
                     <mat-icon>
                         arrow_back
