--- a/Client/src/app/modules/resources/buildings/buildings-list/buildings-list.component.html
+++ b/Client/src/app/modules/resources/buildings/buildings-list/buildings-list.component.html
@@ -38,11 +38,11 @@
             <mat-icon>list</mat-icon>
             <!--Ver salas-->
           </button>
-          <button (click)="editBuilding(element)" mat-raised-button class="btn-primary" style="margin-right: 5px">
+          <button *ngIf="isAdmin()" (click)="editBuilding(element)" mat-raised-button class="btn-primary" style="margin-right: 5px">
             <mat-icon>create</mat-icon>
             <!--Editar-->
           </button>
-          <button mat-raised-button (click)="deleteBuilding(element)" class="btn-danger">
+          <button  *ngIf="isAdmin()" mat-raised-button (click)="deleteBuilding(element)" class="btn-danger">
             <mat-icon>delete</mat-icon>
             <!--Eliminar-->
           </button>
