--- a/Client/src/app/modules/resources/resources-landing/resources-landing.component.html
+++ b/Client/src/app/modules/resources/resources-landing/resources-landing.component.html
@@ -33,7 +33,7 @@
       </div>
 
       <!-- CARRERAS -->
-      <div class="col-lg-3 col-md-6 col-sm-6">
+      <div class="col-lg-3 col-md-6 col-sm-6" *ngIf="isAdmin()">
         <div class="card card-stats">
           <div class="card-header card-header-success card-header-icon">
             <div class="card-icon">
@@ -76,7 +76,7 @@
       </div>
 
       <!-- PROFESORES -->
-      <div class="col-lg-3 col-md-6 col-sm-6">
+      <div class="col-lg-3 col-md-6 col-sm-6" *ngIf="isAdmin()">
         <div class="card card-stats">
           <div class="card-header card-header-info card-header-icon">
             <div class="card-icon">
