--- a/Client/src/app/modules/resources/subjects/sections-table/sections-table.component.html
+++ b/Client/src/app/modules/resources/subjects/sections-table/sections-table.component.html
@@ -24,7 +24,7 @@
           <mat-icon>view_list</mat-icon>
           <!--Ver salas-->
         </button>
-        <button (click)="deleteSection(element)" mat-raised-button class="btn-danger">
+        <button *ngIf="canEdit()" (click)="deleteSection(element)" mat-raised-button class="btn-danger">
           <mat-icon>delete</mat-icon>
           <!--Eliminar-->
         </button>
