--- a/Client/src/app/modules/requests/request-dialog/request-dialog.component.html
+++ b/Client/src/app/modules/requests/request-dialog/request-dialog.component.html
@@ -1,22 +1,22 @@
 <h3 mat-dialog-title>Solicitud de asignación</h3>
 <div mat-dialog-content fxLayout="column" fxLayoutGap="5px" style="padding-bottom: 5px ">
-  <p><b>Solicitante:</b> {{data.request.professor.name}}</p>
-  <p><b>Sección:</b> {{data.request.section.name}}</p>
-  <p><b>Sala:</b> {{data.request.classroom.name}}</p>
-  <div *ngIf="!data.request.special">
-    <div *ngIf="data.request.span > 0">
-      <b>Periodos: </b>{{textOfDay(data.request.day)}}, Bloques [{{data.request.block + 1}}-{{data.request.block + data.request.span}}]
+  <p><b>Solicitante:</b> {{request.professor.name}}</p>
+  <p><b>Sección:</b> {{request.section.name}}</p>
+  <p><b>Sala:</b> {{request.classroom.name}}</p>
+  <div *ngIf="!request.special">
+    <div *ngIf="request.span > 0">
+      <b>Periodos: </b>{{textOfDay(request.day)}}, Bloques [{{request.block + 1}}-{{request.block + request.span}}]
     </div>
-    <div *ngIf="data.request.span == 0">
-      <b>Periodo: </b>{{textOfDay(data.request.day)}}, Bloque {{data.request.block + 1}}
+    <div *ngIf="request.span == 0">
+      <b>Periodo: </b>{{textOfDay(request.day)}}, Bloque {{request.block + 1}}
     </div>
   </div>
-  <div *ngIf="data.request.special">
-    <b>Válido en: </b>{{data.request.expiration | date: 'dd-MMM' }}, Bloque {{data.request.block + 1}}
+  <div *ngIf="request.special">
+    <b>Válido en: </b>{{request.expiration | date: 'dd-MMM' }}, Bloque {{request.block + 1}}
   </div>
-  <p><b>Motivo:</b> {{data.request.comment}}</p>
+  <p><b>Motivo:</b> {{request.comment}}</p>
 </div>
 <div mat-dialog-actions class="pull-right">
   <button mat-raised-button (click)="close()" class="btn-danger">Cancelar</button>
-  <button mat-raised-button [disabled]="!data.available || data.request.accepted" [mat-dialog-close]="data.request" class="btn-success">Aceptar</button>
+  <button mat-raised-button [disabled]="!request.available || request.accepted" [mat-dialog-close]="request" class="btn-success">Aceptar</button>
 </div>
