--- a/Client/src/app/modules/requests/requests-landing/requests-landing.component.html
+++ b/Client/src/app/modules/requests/requests-landing/requests-landing.component.html
@@ -56,17 +56,19 @@
             <ng-container matColumnDef="available">
                 <mat-header-cell *matHeaderCellDef> Estado </mat-header-cell>
                 <mat-cell *matCellDef="let element">
-                    <button class="btn btn-sm btn-info"
-                        *ngIf="isAvailable(element.classroom, element.day, element.block)">
-                        Disponible
-                    </button>
-                    <button class="btn btn-sm btn-warning"
-                        *ngIf="!isAvailable(element.classroom, element.day, element.block) && !element.accepted">
-                        No Disponible
-                    </button>
                     <button class="btn btn-sm btn-success" *ngIf="element.accepted">
                         Aceptada
                     </button>
+                    <div *ngIf="!element.accepted">
+                        <button class="btn btn-sm btn-info"
+                            *ngIf="element.available">
+                            Disponible
+                        </button>
+                        <button class="btn btn-sm btn-warning"
+                            *ngIf="!element.available && !element.accepted">
+                            No Disponible
+                        </button>
+                    </div>
                 </mat-cell>
             </ng-container>
 
@@ -74,7 +76,8 @@
             <ng-container matColumnDef="options">
                 <mat-header-cell *matHeaderCellDef> Opciones </mat-header-cell>
                 <mat-cell class="options-cell" *matCellDef="let element">
-                    <button (click)="openDialog(element, isAvailable(element.classroom, element.day, element.block))" mat-raised-button class="btn-success" style="margin-right: 5px">
+                    <button (click)="openDialog(element, element.available)"
+                        mat-raised-button class="btn-success" style="margin-right: 5px">
                         <mat-icon>
                             list
                         </mat-icon>
