Revert "Merged PR 44: AssignationRequest List & Management
- Assignation request list
- Managament (Accept, delete)

Related work items: #60, #61"

--- a/Client/src/app/modules/resources/buildings/classrooms/classrooms-list/classrooms-list.component.html
+++ b/Client/src/app/modules/resources/buildings/classrooms/classrooms-list/classrooms-list.component.html
@@ -8,6 +8,10 @@
       </div>
     </div>
     <div fxLayout="row" fxLayoutAlign="end center" fxLayoutGap="5px">
+      <button mat-raised-button class="btn-info">
+        <mat-icon>search</mat-icon>
+        Buscar disponible
+      </button>
         <button mat-raised-button (click)="addClassroom()"  class="btn-success pull-right">
           <mat-icon>add</mat-icon>
           Agregar
