--- a/Client/src/app/components/assignation-request/assignation-request.component.html
+++ b/Client/src/app/components/assignation-request/assignation-request.component.html
@@ -86,7 +86,7 @@
             <form [formGroup]="thirdFormGroup">
                 <ng-template matStepLabel>Comentarios</ng-template>
                 <mat-form-field class="full-width">
-                    <input matInput max="30" formControlName="comment" placeholder="¿Para qué será usada la sala?">
+                    <textarea matInput formControlName="comment" placeholder="¿Para qué será usada la sala?"></textarea>
                 </mat-form-field>
             </form>
 
