--- a/Client/src/app/modules/resources/subjects/subjects-list/subjects-list.component.html
+++ b/Client/src/app/modules/resources/subjects/subjects-list/subjects-list.component.html
@@ -6,16 +6,16 @@
         Módulos de: {{ nameToShow }}
       </h3>
       <div *ngIf="career && (isDirector() || isAdmin())" fxLayout="row" fxLayoutAlign="end center">
-          <p style="margin-bottom: 0px !important">Asignación de horarios:</p>
-          <button class="btn btn-sm button-completed" type="button" (click)="changeCompleted()" [disabled]="!isDirector()"
-            [class.btn-success]="career?.isCompleted" [class.btn-outline-success]="!career?.isCompleted">
-            {{career.isCompleted ? 'Completada' : 'No completada'}}
-          </button>
-        </div>
+        <p style="margin-bottom: 0px !important">Asignación de horarios:</p>
+        <button class="btn btn-sm button-completed" type="button" (click)="changeCompleted()" [disabled]="!isDirector()"
+          [class.btn-success]="career?.isCompleted" [class.btn-outline-success]="!career?.isCompleted">
+          {{career.isCompleted ? 'Completada' : 'No completada'}}
+        </button>
+      </div>
     </div>
-    <div fxLayout="row" >
-      <div fxFlexAlign="start" fxFlex=30% [hidden]="!isAdmin()">
-        <mat-form-field >
+    <div fxLayout="row" fxLayoutAlign="space-between">
+      <div fxFlexAlign="start" [hidden]="!isAdmin()">
+        <mat-form-field>
           <mat-label>Carrera</mat-label>
           <mat-select [(value)]="idCareer">
             <mat-option (click)="careerChange()" *ngFor="let career of careers" [value]="career.id">
@@ -24,8 +24,7 @@
           </mat-select>
         </mat-form-field>
       </div>
-      <div style="margin: 15px" fxLayout="row" fxLayoutAlign="end" fxFill fxFlexAlign="end" fxLayoutGap="5px">
-
+      <div style="margin: 15px" fxLayout="row" fxLayoutAlign="end" fxLayoutGap="5px">
         <button (click)="addSubject()" [disabled]="!idCareer" mat-raised-button class="btn-success pull-right">
           <mat-icon>add</mat-icon>
           Agregar
@@ -34,6 +33,12 @@
           <mat-icon>cloud_upload</mat-icon>
           Cargar
         </button>
+        <a href="api/careers/{{idCareer}}/Schedule">
+          <button mat-raised-button class="btn-success">
+            <mat-icon>table_chart</mat-icon>
+            Horario
+          </button>
+        </a>
         <button (click)="clearSubjects()" mat-raised-button [disabled]="!idCareer" class="btn-danger">
           <mat-icon>delete</mat-icon>
           Eliminar secciones
@@ -41,7 +46,7 @@
       </div>
     </div>
     <!--<div *ngIf="loaded$ | async">-->
-    
+
     <!--</div>-->
     <app-sections-table *ngIf="data" [values]="data"></app-sections-table>
   </div>
