--- a/Client/src/app/components/navbar/navbar.component.html
+++ b/Client/src/app/components/navbar/navbar.component.html
@@ -28,7 +28,7 @@
                         Asignación Automática
                     </button>
                 </li>
-                <li class="nav-item" *ngIf="!isAdmin()">
+                <li class="nav-item" *ngIf="isProfessor()">
                     <button (click)="sendAssignationRequest()" class="btn btn-sm btn-outline-light">
                         Solicitud de Asignación
                     </button>
@@ -56,7 +56,7 @@
                         </p>-->
                     </a>
                     <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownMenuLink">
-                        <p class="dropdown-item">Perfil</p>
+                        <!--p class="dropdown-item">Perfil</p>-->
                         <p class="dropdown-item" (click)="logout()">Cerrar Sesión</p>
                     </div>
                 </li>
